# iqtree3

./: .gitignore  CMakeLists.txt  README.md
alignment/: alignment.cpp  alignment.h  pattern.cpp  superalignment.cpp  superalignment.h
main/: alisim.cpp  libiqtree_fun.h  main.cpp  phyloanalysis.cpp  phylotesting.cpp  phylotesting.h  treetesting.cpp  treetesting.h
model/: modelfactory.cpp  modelfactory.h  modelmarkov.cpp  modelmixture.cpp  modelmixture.h  modelset.cpp  modelsubst.cpp  modelsubst.h  partitionmodel.cpp  partitionmodel.h  partitionmodelplen.cpp  rategammainvar.cpp
simulator/: alisimulator.cpp
test/tree/: test_phylokernelnew.cpp
tree/: CMakeLists.txt  iqtree.cpp  iqtreemix.cpp  phylokernel.cpp  phylokernel.h  phylokernel_openacc.cpp  phylokernel_openacc.h  phylokernel_openacc_test.cpp  phylokernel_openacc_test.h  phylokernelgpu.h  phylokernelnew.h  phylonode.h  phylosupertree.cpp  phylosupertree.h  phylotree.cpp  phylotree.h  phylotreegpu.cpp  phylotreemixlen.cpp  phylotreesse.cpp
utils/: CMakeLists.txt  bionj2.cpp  kernelParam.cpp  kernelParam.h  progress.h  starttree.cpp  starttree.h  tools.cpp  tools.h
vectorclass/: CMakeLists.txt  vectorclass.h  vectorf32.h  vectorf64.h  vectori32.h  vectormath_common.h  vectormath_exp.h
